src/test/ui/abi/abi-typo-unstable.stderr
error[E0703]: invalid ABI: found `rust-intrinsec`
  --> $DIR/abi-typo-unstable.rs:2:8
   |
LL | extern "rust-intrinsec" fn rust_intrinsic() {}
   |        ^^^^^^^^^^^^^^^^ invalid ABI
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0703`.
